--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -7,7 +7,7 @@
 		<!-- Google Fonts https://fonts.google.com/specimen/Ubuntu?preview.text_type=custom -->
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
-        <title>Modele</title>
+        <title>OU_EST_MON_PAIN</title>
     </head>
     <body>
         <div id="root"></div>
