Lock CORS, add readme for back, add meta description for SEO

--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -4,6 +4,8 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta http-equiv="x-ua-compatible" content="ie=edge" />
+		<meta name="description" content="Bienvene sur la boulangerie en ligne de votre boulangerie préférée OU EST MON PAIN.">
+  		<meta name="author" content="OU EST MON PAIN Team">
 		<!-- Google Fonts https://fonts.google.com/specimen/Ubuntu?preview.text_type=custom -->
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
